----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-06-05 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.

2005-06-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/chinese_traditional: Updates, thanks to Siu Sun.
    * lang/finnish: update, thanks to Jouni Kahkonen
    * lang/norwegian: Update, thanks to Sven-Erik Andersen
    * db_details_structure.php: optional message $strNumberOfFields,
      will use $strFields if not defined
    * db_operations.php, lang/*: bug #1212997, db copy should not
      always perform CREATE DATABASE

2005-06-03 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/tatar*, /sync_lang.sh, libraries/select_lang.lib.php,
      translators.html, Documentation.html, README:
      new language (tatar), thanks to Albert Fazlí

2005-06-01 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: bug #1213761, hint about Hardened PHP
      and the Missing parameters problem, thanks to Klaus Dorninger

2005-05-31 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: patch 1209863, XHTML validity,
      thanks to Ryan Schmidt

2005-05-29 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug #1184325, Label IDs mismatch for ENUM type,
      thanks to Ryan Schmidt
    * footer.inc.php: bug #1209891, db list not refreshed when the left
      frame is positionned on a db, then a manual DROP DATABASE it done
      on another db
    * db_operations.php, footer.inc.php: bug #1170227, copying a db does not
      refresh the queryframe

2005-05-27 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties.inc.php: bug #1205940, current timestamp checkbox
      when field type changes

2005-05-26 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_create.php: bug #1207406, undefined index from PMA_setComment()
    * sql.php: bug #1204913, left frame update on manual table rename

2005-05-25 Marc Delisle  <lem9@users.sourceforge.net>